--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
       <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="preload" as="style" />
       <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="stylesheet" />
 	  <% } %> -->
+    <style>
+      body {
+        margin: 0;
+        width: 100%;
+        box-sizing: border-box;
+      }
+    </style>
     <title><%= webpackConfig.name %></title>
   </head>
   <body>
