--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
         margin: 0;
         width: 100%;
         box-sizing: border-box;
+        background: #F3F6FD;
+        min-height: 100vh;
       }
     </style>
     <title><%= webpackConfig.name %></title>
