--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <script src="//api.map.baidu.com/api?v=2.0&ak=fttekDTqWAsVp1Y6m0b8K6BhITGvEdxz"></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- <% for (var i in
       htmlWebpackPlugin.options.cdn&&htmlWebpackPlugin.options.cdn.css) { %>
